add search by username
